[package]
name = "distrans"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
rand= "0.9.2"
spake2 = "0.4.0"
hkdf = "0.12"
sha2 = "0.10.9"
chacha20poly1305 = "0.10.1"
# flate2 = "1.0"
zstd = "0.13"
