[package]
name = "rift"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
rand= "0.9.2"
spake2 = "0.4.0"
hkdf = "0.12"
sha2 = "0.10.9"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.49", features = ["cargo", "derive"] }
indicatif = "0.18.0"
arboard = "3.6.1"
zip = "6.0.0"
walkdir = "2.5.0"
env_logger = "0.11"
colored = "*"
log = "0.4"
